[tool.poetry]
name = "fetchingtiktok"
version = "0.1.0"
description = ""
authors = ["Tamagil <tamagiltamagil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktokapi = "^6.3.0"
pystyle = "^2.9"
requests = "^2.32.3"
inquirer = "^3.2.5"
colorama = "^0.4.6"
moviepy = "^1.0.3"
rich = "^13.7.1"
requests-html = "^0.10.0"
requests-random-user-agent = "^2023.2.15"
playwright = "^1.44.0"
undetected-chromedriver = "^3.5.5"
beautifulsoup4 = "^4.12.3"
selenium = "^4.22.0"
numpy = "^2.0.0"
scikit-image = "^0.24.0"
torch = "^2.3.1"
torchvision = "^0.18.1"
tensorboard = "^2.17.0"
pillow = "^10.3.0"
opencv-python = "^4.10.0.84"
gdown = "^5.2.0"
wmi = "^1.5.1"
psutil = "^6.0.0"
pip = "^24.1"
install = "^1.3.5"
pydub = "^0.25.1"
pypdf = "^4.2.0"
reportlab = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
